fixed some alignment issues

--- a/site/stylesheets/less/style.less
+++ b/site/stylesheets/less/style.less
@@ -383,10 +383,29 @@ body {
 					#additional-name {
 						width: 2rem;
 					}
+					h3 {
+						padding-left: 10%;
+						padding-right: 10%;
+						width: 80%;
+					}
+					fieldset {
+						width: 100%;
+						p {
+							padding-left: 7.5%;
+							padding-right: 10%;
+							width: 81.5%;
+							input {
+								margin-left: 1%;
+							}
+						}
+						input {
+							margin-left: 10%;
+						}
+					}
 					h3, fieldset {
-						padding-left: 80px;
+				/*		padding-left: 80px;
 						padding-right: 80px;
-						float: left;
+				*/		float: left;
 						clear: both;
 						&#google-checkout {
 							padding-left: 61px;
